# tmuxlayout

./: Cargo.toml  README.md  example.sh  example.yaml  testplugin.sh
src/: log.yaml  main.rs
